--- a/roles/prometheus/handlers/main.yml
+++ b/roles/prometheus/handlers/main.yml
@@ -1,7 +1,7 @@
 - name: Restart the Prometheus service
   service:
     name: prometheus
-    state: restarted
+    state: restart
   listen: event_restart_prometheus
 
 - name: Reload systemd
