updating ansible.cf

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory = /etc/ansible/inventory
-remote_user = ansible
+inventory = /home/ubuntu/ docker_ansible_grafana_prome
+remote_user = ubuntu
 host_key_checking = False
