--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -18,8 +18,8 @@
     grafana_api_key: "eyJrIjoiUERFbkZmNklITnFpM1p1VWtkeXkwSU1tSUNyYUZqQVYiLCJuIjoidGVzdCIsImlkIjoxfQ==" 
     dashboard_id: 1860
     dashbord_revision: 1
-- name: Prometheus
-  type: "prometheus"
+- name: "Prometheus"
+  type: prometheus
     url: http://localhost:9090
     isDefault: true    
 - name: "Grafana configuration file copy"
