--- a/playbook.yml
+++ b/playbook.yml
@@ -11,12 +11,12 @@
   become_method: sudo
   roles:
     - prometheus
-- hosts: grafana
-  become: yes
-  become_user: root
-  become_method: sudo
-  roles:
-    - grafana      
+# - hosts: grafana
+#   become: yes
+#   become_user: root
+#   become_method: sudo
+#   roles:
+#     - grafana      
 - hosts: node_exporter
   become: yes
   become_user: root
