--- a/install-docker.yml
+++ b/install-docker.yml
@@ -2,6 +2,11 @@
 - name: Install Docker
   hosts: all
   become: true
+  become_method: sudo 
+  become_user:root
+  vars:
+     ansible_become_pass:123456
+  connection: ssh 
   tasks:
     - name: Install Docker dependencies
       apt:
