--- a/prometheus_install.yml
+++ b/prometheus_install.yml
@@ -19,3 +19,9 @@
       apt:
         name: prometheus
         state: present
+
+    - name: Start Prometheus service
+      service:
+        name: prometheus
+        state: started
+        enabled: yes
