--- a/install-node_exporter.yml
+++ b/install-node_exporter.yml
@@ -6,7 +6,8 @@
   tasks:
     - name: Download Node Exporter
       get_url:
-        url: https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz
+        #url: https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz
+        url:https://github.com/prometheus/node_exporter/releases/download/v1.5.0/node_exporter-1.5.0.darwin-amd64.tar.gz
         dest: /tmp/node_exporter.tar.gz
 
     - name: Extract Node Exporter
