--- a/install-node_exporter.yml
+++ b/install-node_exporter.yml
@@ -8,7 +8,7 @@
       get_url:
         #url: https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz
         url:https://github.com/prometheus/node_exporter/releases/download/v1.5.0/node_exporter-1.5.0.darwin-amd64.tar.gz
-        dest: /tmp/node_exporter.tar.gz
+        dest: /tmp/node_exporter-1.5.0.darwin-amd64.tar.gz
 
     - name: Extract Node Exporter
       ansible.builtin.unarchive:
